--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "adbario/php-dot-notation": "^2.0",
+        "pimple/pimple": "^3.2",
+        "symfony/http-foundation": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2",
