--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     ],
     "require": {
         "php": ">=5.5",
-        "guzzlehttp/guzzle": "^6.3",
-        "stichoza/google-translate-php": "^3.2"
+        "guzzlehttp/guzzle": "~6.0|~7.0",
+        "stichoza/google-translate-php": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
