--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     ],
     "require": {
         "php": ">=5.5",
-        "guzzlehttp/guzzle": "~6.0|~7.0",
-        "stichoza/google-translate-php": "^4.0"
+        "guzzlehttp/guzzle": "*",
+        "stichoza/google-translate-php": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "mockery/mockery": "^0.9"
+        "phpunit/phpunit": "*",
+        "mockery/mockery": "*"
     },
     "autoload": {
         "psr-4": {
