--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,27 @@
 {
     "name": "mouyong/translate",
+    "description": "An extension package that supports multi platform translation, such as Baidu translation, Google translation, Jinshan translation and Youdao translation",
+    "keywords": ["translate", "baidu", "google", "jinshan", "youdao"],
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "牟勇",
-            "email": "my24251325@gmail.com"
+            "name": "mouyong",
+            "email": "my24251325@gmail.com",
+            "homepage": "https://github.com/mouyong",
+            "role": "Creator & Developer"
         }
     ],
+    "support": {
+        "source": "https://github.com/mouyong/translate",
+        "homepage": "https://github.com/mouyong/translate",
+        "issues": "https://github.com/mouyong/translate/issues"
+    },
     "require": {
         "php": ">=5.5",
+        "zhenmu/support": "^1.0",
         "guzzlehttp/guzzle": "*",
-        "stichoza/google-translate-php": "*"
+        "stichoza/google-translate-php": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
@@ -18,12 +29,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Yan\\Translate\\": "src"
+            "MouYong\\Translate\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Yan\\Translate\\Test\\": "tests"
+            "MouYong\\Translate\\Test\\": "tests"
         }
     }
 }
